--- a/src/web.public/public/stylesheets/partials/_base.scss
+++ b/src/web.public/public/stylesheets/partials/_base.scss
@@ -1,9 +1,9 @@
 
 $main-spot-colour: #2d8881;
-$light-background-colour: #e6e6df;
-$control-border-colour: #333;
+$light-background-colour: #c3d5d4;
+$control-border-colour: #bbb;
 $alt-black-colour: #78725b;
-$disabled-text: #bbb;
+$disabled-text: #999;
 $normal-border-radius: 6px;
 $body-font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 
