--- a/src/web.public/public/stylesheets/partials/_lists.scss
+++ b/src/web.public/public/stylesheets/partials/_lists.scss
@@ -5,36 +5,37 @@
 }
 
 .footer-copyright {
-  display: table;
+  //display: table;
   clear: both;
-  width: 90%;
-  max-width: 290px;
   margin-left: auto;
   margin-right: auto;
 
-  @include mq($from: tablet) {
-    float: right;
-    clear: none;
-    margin-left: 0px;
-    margin-right: 50px;
+//  @include mq($from: tablet) {
+//    float: right;
+//    clear: none;
+//    margin-left: 0px;
+//    margin-right: 50px;
+//  }
+
+  img {
+    display: none;
   }
 
   span, p {
-    display: table-cell;
-    vertical-align: middle;
   }
 
   p {
-    width: 100%;
-    text-align: right;
-    padding-top: 3px;
-    font-size: 10px;
+    //width: 100%;
+    //text-align: right;
+    //padding-top: 1px;
+    font-size: 9px;
     color: $alt-black-colour;
     margin-bottom: 2px;
+    text-align: center;
   }
 
-  img {
-    width: 80px;
-    height: 22px;
-  }
+//  img {
+//    width: 80px;
+//    height: 22px;
+//  }
 }
