--- a/src/web.public/public/stylesheets/main.scss
+++ b/src/web.public/public/stylesheets/main.scss
@@ -8,6 +8,7 @@
 @import 'bourbon/bourbon';
 @import 'neat/neat';
 @import "vendor/mq";
+@import "vendor/angular-dropdowns";
 
 @import "partials/base";
 @import "partials/reset";
@@ -20,3 +21,4 @@
 @import "partials/logos";
 @import "partials/custom-controls";
 @import "partials/lists";
+@import "partials/toolbars";
