before header rework

--- a/src/web.public/public/stylesheets/partials/_base.scss
+++ b/src/web.public/public/stylesheets/partials/_base.scss
@@ -6,5 +6,6 @@ $alt-black-colour: #78725b;
 $disabled-text: #999;
 $normal-border-radius: 6px;
 $body-font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+$menu-arrow-size: 7px;
 
 @import "modules/retina";
