--- a/src/web.public/public/stylesheets/partials/_allmighty-autocomplete.scss
+++ b/src/web.public/public/stylesheets/partials/_allmighty-autocomplete.scss
@@ -6,17 +6,18 @@
 }
 
 .autocomplete ul {
-    position: absolute;
-    left: 0;
-    width: 100%;
-    border-left: 2px solid #888;
-    border-right: 2px solid #888;
-    border-bottom: 2px solid #888;
-    z-index: 1;
-    background-color: white;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  border-left: 1px solid $control-border-colour;
+  border-right: 1px solid $control-border-colour;
+  border-bottom: 1px solid $control-border-colour;
+  z-index: 1;
+  background-color: white;
+  padding-bottom: 3px;
 }
 
-.autocomplete li{
+.autocomplete li {
     text-align: left;
     list-style:none;
     width: 100%;
@@ -25,7 +26,7 @@
     line-height: 0.8em;
 }
 
-.autocomplete li.active{
+.autocomplete li.active {
     width: 100%;
     background-color: $main-spot-colour;
     color: white;
