--- a/src/web.public/public/stylesheets/partials/_toolbars.scss
+++ b/src/web.public/public/stylesheets/partials/_toolbars.scss
@@ -3,30 +3,39 @@ header .searchbox-wrapper {
   position: relative;
   width: 100%;
 
+  @include mq($from: mobile-landscape) {
+    //display: table;
+    
+  }
+
+  .search-input {
+    @include mq($from: mobile-landscape) {
+      //display: table-cell;
+    }
+  }
+
   .platform-menu {
     position: absolute;
     top: -36px;
     right: 0;
 
+    @include mq($from: mobile-landscape) {
+      position: relative;
+      top: 0px;
+      //display: table-cell;
+    }
+
     button {
-      //padding: 4px 6px;
       margin-right: 3px;
-      //@include button(#fff);
       font-size: 14px;
       padding: 5px 8px;
       font-weight: normal;
-      min-width: 150px;
-      //border: 1px solid $control-border-colour;
-      //@include border-top-radius(6px);
-      //@include border-bottom-radius(6px);
-    }
+      min-width: 140px;
 
-//    ul {
-//      position: absolute;
-//      right: 0;
-//      top: 34;
-//      display: none;
-//    }
+      @include mq($from: mobile-landscape) {
+        position: relative;
+      }
+    }
   }
 
   .btn-menu {
@@ -35,25 +44,29 @@ header .searchbox-wrapper {
     border: 1px solid $control-border-colour;
     @include border-top-radius(6px);
     @include border-bottom-radius(6px);
-    //border-radius: 7px;
-    //box-shadow: 0 1px 1px rgba(50,50,50,0.25);
-    /*style the text*/
     color: $alt-black-colour; // #8AA8BD;
     font-weight: bold;
     cursor: pointer;
     text-align: left;
   }
 
-  .caret {
-      width: 0;
-      height: 0;
-  position: absolute;
-    right: 10px;
-  top: 40%;
-      border-left: 7px solid transparent;
-      border-right: 7px solid transparent;
+//  .wrap-dd-menu .dropdown li a {
+//    color: $alt-black-colour;
+//  }
 
-      border-top: 7px solid $alt-black-colour;
+  .wrap-dd-menu .dropdown {
+    border: 1px solid $control-border-colour;
+  }
+
+  .caret {
+    width: 0;
+    height: 0;
+    position: absolute;
+    right: 10px;
+    top: 40%;
+    border-left: $menu-arrow-size solid transparent;
+    border-right: $menu-arrow-size solid transparent;
+    border-top: $menu-arrow-size solid $alt-black-colour;
   }
 
   .btn-menu:hover, .btn-menu:focus {
