--- a/src/web.public/public/stylesheets/main.scss
+++ b/src/web.public/public/stylesheets/main.scss
@@ -12,13 +12,11 @@
 
 @import "partials/base";
 @import "partials/reset";
-@import "partials/grids";
+@import "partials/browser";
 @import "partials/typography";
+@import "partials/layout";
 @import "partials/allmighty-autocomplete";
 @import "partials/links";
-@import "partials/menus";
-@import "partials/text-controls";
+@import "partials/input";
 @import "partials/logos";
 @import "partials/custom-controls";
-@import "partials/lists";
-@import "partials/toolbars";
