--- a/src/web.public/public/stylesheets/partials/_custom-controls.scss
+++ b/src/web.public/public/stylesheets/partials/_custom-controls.scss
@@ -1,4 +1,3 @@
-
 // PLATFORM BIG BUTTONS
 
 $platform-big-button-padding: 6px;
@@ -102,6 +101,77 @@ $platform-big-button-border-colour: $main-spot-colour;
   }
 }
 
+// PLATFORM MENU
+
+header .searchbox-wrapper {
+
+  .platform-menu {
+    button {
+      margin-right: 3px;
+      font-size: 14px;
+      padding: 5px 8px;
+      font-weight: normal;
+      min-width: 140px;
+      position: relative;
+      background: white;
+      border: 1px solid $control-border-colour;
+      @include border-top-radius(6px);
+      @include border-bottom-radius(6px);
+      color: $alt-black-colour;
+      cursor: pointer;
+      text-align: left;
+
+      .caret {
+        width: 0;
+        height: 0;
+        position: absolute;
+        right: 10px;
+        top: 40%;
+        border-left: $menu-arrow-size solid transparent;
+        border-right: $menu-arrow-size solid transparent;
+        border-top: $menu-arrow-size solid $alt-black-colour;
+      }
+    }
+
+    button:hover,
+    button:focus {
+      outline: 0;
+    }
+
+    .dropdown {
+      border: 1px solid $control-border-colour;
+    }
+  }
+
+  .platform-menu.open {
+    ul {
+      display: block;
+      background-color: white;
+      border: 1px solid black;
+      padding: 6px;
+    }
+
+    li {
+      text-align: left;
+      list-style:none;
+      width: 100%;
+      padding:0.4em;
+      background-color: white;
+      line-height: 0.8em;
+
+      a {
+        cursor: pointer;
+      }
+    }
+
+    li.active{
+      width: 100%;
+      background-color: $main-spot-colour;
+      color: white;
+    }
+  }
+}
+
 // SEARCHBOX
 
 $searchbox-button-colour: $main-spot-colour;
@@ -152,14 +222,6 @@ $searchbox-border-colour: $control-border-colour;
       height: 26px;
     }
   }
-
-//  div button:hover:not(:disabled) {
-//    box-shadow: inset 0 1px 0 0 #4bb6ae;
-//    cursor: pointer;
-//    background-color: #2d8881;
-//    background-image: -webkit-linear-gradient(#2d8881, #19635e);
-//    background-image: linear-gradient(#2d8881, #19635e);
-//  }
 }
 
 #home-page form.searchbox .search-input {
@@ -172,46 +234,3 @@ $searchbox-border-colour: $control-border-colour;
     padding: 0 2px;
   }
 }
-
-
-
-
-//header div.content-wrapper {
-//  @include mq($from: 569px) {
-//    display: table;
-//    max-width: 960px;
-//    margin-left: auto;
-//    margin-right: auto;
-//  }
-//
-//  span.content-wrapper {
-//    display: table-cell;
-//    vertical-align: bottom;
-//    width: 200px;
-//  }
-//
-//  div.searchbox-wrapper {
-//    display: table-cell;
-//    vertical-align: bottom;
-//    width: 100%;
-//  }
-//}
-
-//header img.akin-logo {
-//  width: 80px;
-//  height: 22px;
-//  //margin: 3px 0 0 3px;
-//  //float: left;
-//
-//  position: absolute;
-//  left: 3px;
-//  top: 3px;
-//
-//  @include mq($from: 569px) {
-//    width: 138px;
-//    height: 38px;
-//    margin: 0px 12px 3px 0px;
-//    position: relative;
-//  }
-//}
-//
