--- a/src/web.public/public/stylesheets/partials/_typography.scss
+++ b/src/web.public/public/stylesheets/partials/_typography.scss
@@ -1,4 +1,13 @@
+// BASIC FONT
+
 body {
   font-family: $body-font-family;
   font-weight: 300;
+}
+
+// SEARCH RESULTS TEXT
+
+#search-results ul.disabled,
+#search-results ul.disabled a {
+  color: $disabled-text;
 }
