--- a/src/web.public/public/stylesheets/partials/_allmighty-autocomplete.scss
+++ b/src/web.public/public/stylesheets/partials/_allmighty-autocomplete.scss
@@ -21,9 +21,9 @@
     text-align: left;
     list-style:none;
     width: 100%;
-    padding:0.4em;
+    padding: 3px;
     background-color: white;
-    line-height: 0.8em;
+    line-height: 1.2em; //0.8em;
 }
 
 .autocomplete li.active {
