--- a/src/web.public/public/stylesheets/partials/_typography.scss
+++ b/src/web.public/public/stylesheets/partials/_typography.scss
@@ -1,3 +1,13 @@
+// https://icomoon.io/app
+@font-face {
+  font-family: 'icomoon';
+  src: url('/public/fonts/icomoon.eot'); /* IE9 Compat Modes */
+  src: url('/public/fonts/icomoon.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('/public/fonts/icomoon.woff') format('woff'), /* Modern Browsers */
+  url('/public/fonts/icomoon.ttf')  format('truetype'), /* Safari, Android, iOS */
+  url('/public/fonts/icomoon.svg#svgFontName') format('svg'); /* Legacy iOS */
+}
+
 // BASIC FONT
 
 body {
