--- a/src/web.public/public/stylesheets/partials/_links.scss
+++ b/src/web.public/public/stylesheets/partials/_links.scss
@@ -134,3 +134,41 @@ ul.pagination {
     //visibility: hidden;
   }
 }
+
+#search-results .results-wrapper ul.search-types {
+  //padding-bottom: 6px;
+  border-bottom: 1px solid $main-spot-colour;
+  margin-bottom: 12px;
+
+  li {
+    margin-left: 6px;
+
+    a {
+      display: block;
+      min-width: 100px;
+      padding: 3px 6px 6px 6px;
+      border: 1px solid $main-spot-colour;
+      border-bottom: 1px solid white;
+      @include border-top-radius(4px);
+      background-color: white;
+      text-align: center;
+    }
+
+    a,
+    a:link,
+    a:visited,
+    a:hover,
+    a:active {
+      color: $alt-black-colour;
+      font-weight: normal;
+    }
+
+    a,
+    a:link,
+    a:visited,
+    a:active {
+      text-decoration: none;
+    }
+  }
+
+}
