--- a/src/web.public/public/stylesheets/main.scss
+++ b/src/web.public/public/stylesheets/main.scss
@@ -19,4 +19,5 @@
 @import "partials/links";
 @import "partials/input";
 @import "partials/logos";
+@import "partials/items";
 @import "partials/custom-controls";
