--- a/src/web.public/public/stylesheets/partials/_allmighty-autocomplete.scss
+++ b/src/web.public/public/stylesheets/partials/_allmighty-autocomplete.scss
@@ -15,13 +15,14 @@
   z-index: 1;
   background-color: white;
   padding-bottom: 3px;
+  box-shadow: 0px 2px 2px #888;
 }
 
 .autocomplete li {
     text-align: left;
     list-style:none;
     width: 100%;
-    padding: 3px;
+    padding: 3px 3px 3px 9px;
     background-color: white;
     line-height: 1.2em; //0.8em;
 }
