--- a/src/web.public/public/stylesheets/partials/_typography.scss
+++ b/src/web.public/public/stylesheets/partials/_typography.scss
@@ -15,9 +15,18 @@ body {
   font-weight: 300;
 }
 
+p {
+  line-height: 1.2em;
+}
+
+p em {
+  font-weight: bold;
+}
+
 // SEARCH RESULTS TEXT
 
-#search-results ul.disabled,
-#search-results ul.disabled a {
-  color: $disabled-text;
+#search-results .disabled {
+  a, p, h4 {
+    color: $disabled-text-colour!important;
+  }
 }
