Added search clear button and improved autocomplete highlighting

--- a/src/web.public/public/stylesheets/partials/_allmighty-autocomplete.scss
+++ b/src/web.public/public/stylesheets/partials/_allmighty-autocomplete.scss
@@ -36,3 +36,22 @@
 .autocomplete em {
   font-weight: bold;
 }
+
+.autocomplete {
+  a.clear-search {
+    position: absolute;
+    right: 48px;
+    top: 0px;
+
+    display: block;
+    width: 34px;
+    height: 28px;
+    text-align: center;
+    line-height: 28px;
+
+    .icon:after {
+      font-family: "icomoon";
+      content: "+";
+    }
+  }
+}
