search results styling changes

--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -12,6 +12,7 @@ p.warning {
 
 p.search-type {
   padding-bottom: 12px;
+  font-size: 14px;
 
   @include mq($from: tablet) {
     padding-bottom: 18px;
