fix for page number not resetting to 1 on resubmit of search on search results page

--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -30,3 +30,15 @@ li.category-search-result {
     color: $alt-black-colour;
   }
 }
+
+li.app-search-result {
+  h4 {
+    margin-bottom: 3px;
+    font-size: 18px;
+  }
+  p {
+    margin-bottom: 21px;
+    font-size: 14px;
+    color: $alt-black-colour;
+  }
+}
